--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Quality/Quality/bin/
 Quality/Library/bin/
 Quality/BusinessLogicLayer/bin/Debug/BusinessLogicLayer.pdb
 Quality/BusinessLogicLayer/bin/
+Quality/.vs/Quality/
