--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Quality/Library/bin/
 Quality/BusinessLogicLayer/bin/Debug/BusinessLogicLayer.pdb
 Quality/BusinessLogicLayer/bin/
 Quality/.vs/Quality/
+Quality/Quality/Quality.csproj.user
+Quality/.vs/
