--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Quality/.vs/Quality/v16/Server/sqlite3/storage.ide-wal
 Quality/.vs/Quality/
 Quality/Quality/Quality.csproj.user
 Quality/.vs/
+Quality/BusinessLogicLayerTests/bin/
+Quality/BusinessLogicLayerTests/obj/
+Quality/packages/
