--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -43,11 +43,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="Interface\IBulkFGTMailGroup_Service.cs" />
     <Compile Include="Interface\IInspectionService.cs" />
     <Compile Include="Interface\ILoginService.cs" />
+    <Compile Include="Interface\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BulkFGTMailGroup_Service.cs" />
     <Compile Include="Service\InspectionService.cs" />
     <Compile Include="Service\LoginService.cs" />
+    <Compile Include="Service\RFTPerLineService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ADOHelper\ADOHelper.csproj">
@@ -65,6 +69,10 @@
     <ProjectReference Include="..\ProductionDataAccessLayer\ProductionDataAccessLayer.csproj">
       <Project>{c2e1c298-46bf-4bdb-82a8-102777fa89ea}</Project>
       <Name>ProductionDataAccessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ToolKit\ToolKit.csproj">
+      <Project>{f75434e9-6588-4aa4-87f9-7e419dbcc57f}</Project>
+      <Name>ToolKit</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
