--- a/Quality/ADOHelper/ADOHelper.csproj
+++ b/Quality/ADOHelper/ADOHelper.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Template\MSSQL\SQLDAL.cs" />
     <Compile Include="Template\MSSQL\SQLParameterCollection.cs" />
     <Compile Include="Utility\Interface\ISQLDataTransaction.cs" />
+    <Compile Include="Utility\MailTools.cs" />
     <Compile Include="Utility\SQLDataTransaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
