--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Quality/.vs/
 Quality/BusinessLogicLayerTests/bin/
 Quality/BusinessLogicLayerTests/obj/
 Quality/packages/
+Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj.user
