--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -43,9 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="Interface\FinalInspection\IFinalInspectionService.cs" />
     <Compile Include="Interface\IInspectionService.cs" />
     <Compile Include="Interface\ILoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionService.cs" />
     <Compile Include="Service\InspectionService.cs" />
     <Compile Include="Service\LoginService.cs" />
   </ItemGroup>
@@ -67,5 +69,6 @@
       <Name>ProductionDataAccessLayer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
