--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\InspectionServiceTests.cs" />
+    <Compile Include="Service\RFTPerLineServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
