--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Interface\IRFTInspectionMeasurementProvider.cs" />
     <Compile Include="Interface\IRFTInspectionProvider.cs" />
     <Compile Include="Interface\IRFTOrderCommentsProvider.cs" />
+    <Compile Include="Interface\IRFTPerLineProvider.cs" />
     <Compile Include="Interface\IRFTPicDuringDummyFittingProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\MSSQL\AreaProvider.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Provider\MSSQL\RFTInspectionMeasurementProvider.cs" />
     <Compile Include="Provider\MSSQL\RFTInspectionProvider.cs" />
     <Compile Include="Provider\MSSQL\RFTOrderCommentsProvider.cs" />
+    <Compile Include="Provider\MSSQL\RFTPerLineProvider.cs" />
     <Compile Include="Provider\MSSQL\RFTPicDuringDummyFittingProvider.cs" />
   </ItemGroup>
   <ItemGroup>
