--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -34,6 +34,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc">
+      <HintPath>..\Quality\Bin\System.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,12 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="Interface\IAuthorityService.cs" />
     <Compile Include="Interface\IBulkFGTMailGroup_Service.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionService.cs" />
     <Compile Include="Interface\IInspectionService.cs" />
     <Compile Include="Interface\ILoginService.cs" />
     <Compile Include="Interface\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\AuthorityService.cs" />
     <Compile Include="Service\BulkFGTMailGroup_Service.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionService.cs" />
     <Compile Include="Service\InspectionService.cs" />
