--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -33,6 +33,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Mvc">
+      <HintPath>..\Quality\Bin\System.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interface\IAreaProvider.cs" />
+    <Compile Include="Interface\IAuthorityProvider.cs" />
     <Compile Include="Interface\IDQSReasonProvider.cs" />
     <Compile Include="Interface\IInspectionProvider.cs" />
     <Compile Include="Interface\IMailToProvider.cs" />
@@ -61,6 +65,7 @@
     <Compile Include="Interface\IRFTPicDuringDummyFittingProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\MSSQL\AreaProvider.cs" />
+    <Compile Include="Provider\MSSQL\AuthorityProvider.cs" />
     <Compile Include="Provider\MSSQL\DQSReasonProvider.cs" />
     <Compile Include="Provider\MSSQL\InspectionProvider.cs" />
     <Compile Include="Provider\MSSQL\MailToProvider.cs" />
