--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\InspectionServiceTests.cs" />
     <Compile Include="Service\RFTPerLineServiceTests.cs" />
+    <Compile Include="Service\BulkFGTMailGroupTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
