--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Interface\IRFTInspectionProvider.cs" />
     <Compile Include="Interface\IRFTOrderCommentsProvider.cs" />
     <Compile Include="Interface\IBulkFGTMailGroupProvider.cs" />
+    <Compile Include="Interface\ICFTCommentsProvider.cs" />
     <Compile Include="Interface\IRFTPerLineProvider.cs" />
     <Compile Include="Interface\IRFTPicDuringDummyFittingProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,6 +84,7 @@
     <Compile Include="Provider\MSSQL\RFTInspectionProvider.cs" />
     <Compile Include="Provider\MSSQL\RFTOrderCommentsProvider.cs" />
     <Compile Include="Provider\MSSQL\BulkFGTMailGroupProvider.cs" />
+    <Compile Include="Provider\MSSQL\CFTCommentsProvider.cs" />
     <Compile Include="Provider\MSSQL\RFTPerLineProvider.cs" />
     <Compile Include="Provider\MSSQL\RFTPicDuringDummyFittingProvider.cs" />
   </ItemGroup>
