--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\IAuthorityService.cs" />
+    <Compile Include="Interface\IBACriteriaService.cs" />
     <Compile Include="Interface\IBulkFGTMailGroup_Service.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionService.cs" />
     <Compile Include="Interface\IInspectionService.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Interface\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AuthorityService.cs" />
+    <Compile Include="Service\BACriteriaService.cs" />
     <Compile Include="Service\BulkFGTMailGroup_Service.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionService.cs" />
     <Compile Include="Service\InspectionService.cs" />
