調整Measument save要判斷SizeSpec不能為空值才能 存檔; 新增Quality_MenuDetail

--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Provider\MSSQL\MailToProvider.cs" />
     <Compile Include="Provider\MSSQL\MeasurementProvider.cs" />
     <Compile Include="Provider\MSSQL\Pass1Provider.cs" />
+    <Compile Include="Provider\MSSQL\QualityMenuDetailProvider.cs" />
     <Compile Include="Provider\MSSQL\QualityMenuProvider.cs" />
     <Compile Include="Provider\MSSQL\QualityPass1Provider.cs" />
     <Compile Include="Provider\MSSQL\QualityPass2Provider.cs" />
