--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -106,6 +106,7 @@
     <Compile Include="ProductionDB\System.cs" />
     <Compile Include="ProductionDB\TPEPass1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestModel\FinalInspection_Query.cs" />
     <Compile Include="RequestModel\FinalInspection_Request.cs" />
     <Compile Include="RequestModel\LogIn_Request.cs" />
     <Compile Include="RequestModel\UserList_Authority_Request.cs" />
@@ -116,8 +117,10 @@
     <Compile Include="ResultModel\UserList.cs" />
     <Compile Include="ResultModel\UserList_Browse.cs" />
     <Compile Include="ViewModel\FinalInspection\AddDefect.cs" />
-    <Compile Include="ViewModel\FinalInspection\Measurement.cs" />
     <Compile Include="ViewModel\FinalInspection\Moisture.cs" />
+    <Compile Include="ViewModel\FinalInspection\Measurement.cs" />
+    <Compile Include="ViewModel\FinalInspection\QueryReport.cs" />
+    <Compile Include="ViewModel\FinalInspection\QueryFinalInspection.cs" />
     <Compile Include="ViewModel\FinalInspection\Others.cs" />
     <Compile Include="ViewModel\FinalInspection\BeautifulProductAudit.cs" />
     <Compile Include="ViewModel\FinalInspection\Setting.cs" />
