--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -66,21 +66,21 @@
     <Compile Include="Common.cs" />
     <Compile Include="Interface\IAuthorityService.cs" />
     <Compile Include="Interface\IBACriteriaService.cs" />
-    <Compile Include="Interface\IBulkFGTMailGroup_Service.cs" />
+    <Compile Include="Interface\BulkFGT\IBulkFGTMailGroup_Service.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionService.cs" />
-    <Compile Include="Interface\IInspectionService.cs" />
+    <Compile Include="Interface\SampleRFT\IInspectionService.cs" />
     <Compile Include="Interface\ILoginService.cs" />
     <Compile Include="Interface\ICFTCommentsService.cs" />
-    <Compile Include="Interface\IRFTPerLineService.cs" />
+    <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AuthorityService.cs" />
     <Compile Include="Service\BACriteriaService.cs" />
-    <Compile Include="Service\BulkFGTMailGroup_Service.cs" />
+    <Compile Include="Service\BulkFGT\BulkFGTMailGroup_Service.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionService.cs" />
-    <Compile Include="Service\InspectionService.cs" />
+    <Compile Include="Service\SampleRFT\InspectionService.cs" />
     <Compile Include="Service\LoginService.cs" />
     <Compile Include="Service\CFTCommentsService.cs" />
-    <Compile Include="Service\RFTPerLineService.cs" />
+    <Compile Include="Service\SampleRFT\RFTPerLineService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ADOHelper\ADOHelper.csproj">
