--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -114,6 +114,7 @@
     <Compile Include="RequestModel\UserList_Authority_Request.cs" />
     <Compile Include="ResultModelBase.cs" />
     <Compile Include="ResultModel\AuthoritybyPosition.cs" />
+    <Compile Include="ResultModel\BACriteria_Result.cs" />
     <Compile Include="ResultModel\LogIn_Result.cs" />
     <Compile Include="ResultModel\Module_Detail.cs" />
     <Compile Include="ResultModel\Quality_MailGroup_ResultModel.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="ResultModel\UserList.cs" />
     <Compile Include="ResultModel\UserList_Authority.cs" />
     <Compile Include="ResultModel\UserList_Browse.cs" />
+    <Compile Include="ViewModel\BACriteria_ViewModel.cs" />
     <Compile Include="ViewModel\FinalInspection\AddDefect.cs" />
     <Compile Include="ViewModel\FinalInspection\Measurement.cs" />
     <Compile Include="ViewModel\FinalInspection\Moisture.cs" />
