--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Interface\IAreaProvider.cs" />
     <Compile Include="Interface\IAuthorityProvider.cs" />
+    <Compile Include="Interface\IBACriteriaProvider.cs" />
     <Compile Include="Interface\IDQSReasonProvider.cs" />
     <Compile Include="Interface\IInspectionProvider.cs" />
     <Compile Include="Interface\IMailToProvider.cs" />
@@ -87,6 +88,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\MSSQL\AreaProvider.cs" />
     <Compile Include="Provider\MSSQL\AuthorityProvider.cs" />
+    <Compile Include="Provider\MSSQL\BACriteriaProvider.cs" />
     <Compile Include="Provider\MSSQL\DQSReasonProvider.cs" />
     <Compile Include="Provider\MSSQL\InspectionProvider.cs" />
     <Compile Include="Provider\MSSQL\MailToProvider.cs" />
