--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -65,7 +65,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
-    <Compile Include="Interface\IBACriteriaService.cs" />
+    <Compile Include="Interface\SampleRFT\IBACriteriaService.cs" />
     <Compile Include="Interface\BulkFGT\IBulkFGTMailGroup_Service.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionService.cs" />
     <Compile Include="Interface\SampleRFT\IInspectionService.cs" />
@@ -74,12 +74,13 @@
     <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
-    <Compile Include="Service\BACriteriaService.cs" />
+    <Compile Include="Service\SampleRFT\BACriteriaService.cs" />
     <Compile Include="Service\BulkFGT\BulkFGTMailGroup_Service.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionService.cs" />
     <Compile Include="Service\SampleRFT\InspectionService.cs" />
     <Compile Include="Service\LoginService.cs" />
     <Compile Include="Service\CFTCommentsService.cs" />
+    <Compile Include="Service\SampleRFT\PicturesDummyService.cs" />
     <Compile Include="Service\SampleRFT\RFTPerLineService.cs" />
   </ItemGroup>
   <ItemGroup>
