--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
+    <Compile Include="Interface\IMockupCrockingService.cs" />
     <Compile Include="Interface\SampleRFT\IBACriteriaService.cs" />
     <Compile Include="Interface\BulkFGT\IBulkFGTMailGroup_Service.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionService.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
+    <Compile Include="Service\MockupCrockingService.cs" />
     <Compile Include="Service\SampleRFT\BACriteriaService.cs" />
     <Compile Include="Service\BulkFGT\BulkFGTMailGroup_Service.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionService.cs" />
