--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -155,8 +155,8 @@
     <add key="mailPwd" value="orpxof" />
 
     <!--測試區-->
-    <add key="WebPortalURL" value="https://localhost:44398/Home/Login" />
-    <add key="WebPortalURL_HomePage" value="https://localhost:44398/Home/Login" />
+    <add key="WebPortalURL" value="http://localhost:55680/Home/Login" />
+    <add key="WebPortalURL_HomePage" value="http://localhost:55680/Home/Login" />
     <!--正式區-->
     <!--
     <add key="WebPortalURL" value="http://internalportal.sportscity.com.tw/" />
