--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Areas\FinalInspection\FinalInspectionAreaRegistration.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\BACriteriaController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\InspectionController.cs" />
+    <Compile Include="Areas\SampleRFT\Controllers\MeasurementController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\PFTperLineController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\PicturesDummyController.cs" />
     <Compile Include="Areas\SampleRFT\SampleRFTAreaRegistration.cs" />
@@ -257,6 +258,7 @@
     <Content Include="Areas\BulkFGT\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\BulkFGT\Views\BulkFGTMailGroup\Index.cshtml" />
     <Content Include="Areas\SampleRFT\Views\PicturesDummy\Index.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Measurement\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -655,6 +657,9 @@
     <Content Include="ThirdParty\SciCustom\img\_DS_Store" />
     <Content Include="Views\Home\Setting.cshtml" />
     <Content Include="XLT\BACriteria.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="XLT\Measurement.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
