--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
+    <Compile Include="Interface\FinalInspection\IFinalInspectionAddDefectService.cs" />
     <Compile Include="Interface\FinalInspection\IQueryService.cs" />
     <Compile Include="Interface\IMockupCrockingService.cs" />
     <Compile Include="Interface\SampleRFT\IBACriteriaService.cs" />
@@ -83,6 +84,7 @@
     <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionAddDefectService.cs" />
     <Compile Include="Service\FinalInspection\QueryService.cs" />
     <Compile Include="Service\MockupCrockingService.cs" />
     <Compile Include="Service\SampleRFT\BACriteriaService.cs" />
