更新共用查詢視窗

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -669,6 +669,7 @@
     <Content Include="Views\PublicWondow\SizeList.cshtml" />
     <Content Include="Views\PublicWondow\StyleList.cshtml" />
     <Content Include="Views\PublicWondow\TechnicianList.cshtml" />
+    <Content Include="Views\PublicWondow\SewingLineList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
