--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\FinalInspection\CSS\FinalInspection.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -683,7 +684,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Authority\Data\" />
     <Folder Include="Areas\BulkFGT\Data\" />
-    <Folder Include="Areas\FinalInspection\CSS\" />
     <Folder Include="Areas\FinalInspection\Models\" />
     <Folder Include="Areas\SampleRFT\Data\" />
     <Folder Include="Models\" />
