ISP20211012 - GarmentTest 合併

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -138,6 +138,8 @@
     <Compile Include="ResultModel\UserList_Authority.cs" />
     <Compile Include="ResultModel\UserList_Browse.cs" />
     <Compile Include="ViewModel\BACriteria_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\GarmentTest_ViewModel.cs" />
     <Compile Include="ViewModel\FinalInspection\AddDefect.cs" />
     <Compile Include="ViewModel\FinalInspection\Moisture.cs" />
     <Compile Include="ViewModel\FinalInspection\Measurement.cs" />
