--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -92,6 +92,7 @@
     <Compile Include="ManufacturingExecutionDB\RFT_OrderComments.cs" />
     <Compile Include="ManufacturingExecutionDB\RFT_PicDuringDummyFitting.cs" />
     <Compile Include="ProductionDB\AcceptableQualityLevels.cs" />
+    <Compile Include="ProductionDB\Adidas_FGWT.cs" />
     <Compile Include="ProductionDB\Brand.cs" />
     <Compile Include="ProductionDB\DropDownList.cs" />
     <Compile Include="ProductionDB\Factory.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="ProductionDB\GarmentTest_Detail_FGPT.cs" />
     <Compile Include="ProductionDB\GarmentTest_Detail_FGWT.cs" />
     <Compile Include="ProductionDB\GarmentTest_Detail_Shrinkage.cs" />
+    <Compile Include="ProductionDB\Garment_Detail_Spirality.cs" />
     <Compile Include="ProductionDB\MockupCrocking.cs" />
     <Compile Include="ProductionDB\MockupCrocking_Detail.cs" />
     <Compile Include="ProductionDB\NewCDCode.cs" />
@@ -116,6 +118,7 @@
     <Compile Include="ProductionDB\Style_Article.cs" />
     <Compile Include="ProductionDB\System.cs" />
     <Compile Include="ProductionDB\TPEPass1.cs" />
+    <Compile Include="ProductionDB\TypeSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Public\WindowModel.cs" />
     <Compile Include="RequestModel\FinalInspection_Query.cs" />
@@ -147,6 +150,7 @@
     <Compile Include="ViewModel\FinalInspection\BeautifulProductAudit.cs" />
     <Compile Include="ViewModel\FinalInspection\Setting.cs" />
     <Compile Include="ResultModel\GarmentTest_Result.cs" />
+    <Compile Include="ViewModel\GarmentTest_ViewModel.cs" />
     <Compile Include="ViewModel\InspectionSave_ViewModel.cs" />
     <Compile Include="ViewModel\Inspection_ViewModel.cs" />
     <Compile Include="ViewModel\ReworkList_ViewModel.cs" />
