ISP20211083 Final Inspection Excel 報表

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -134,6 +134,7 @@
     <Compile Include="ViewModel\FinalInspection\AddDefect.cs" />
     <Compile Include="ViewModel\FinalInspection\Moisture.cs" />
     <Compile Include="ViewModel\FinalInspection\Measurement.cs" />
+    <Compile Include="ViewModel\FinalInspection\QueryReport_Measurement.cs" />
     <Compile Include="ViewModel\FinalInspection\QueryReport.cs" />
     <Compile Include="ViewModel\FinalInspection\QueryFinalInspection.cs" />
     <Compile Include="ViewModel\FinalInspection\Others.cs" />
