--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interface\IFinalInspection_MeasurementProvider.cs" />
     <Compile Include="Interface\IFinalInspectionProvider.cs" />
     <Compile Include="Interface\IAreaProvider.cs" />
     <Compile Include="Interface\IAuthorityProvider.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Interface\IRFTPerLineProvider.cs" />
     <Compile Include="Interface\IRFTPicDuringDummyFittingProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provider\MSSQL\FinalInspection_MeasurementProvider.cs" />
     <Compile Include="Provider\MSSQL\FinalInspectionProvider.cs" />
     <Compile Include="Provider\MSSQL\AreaProvider.cs" />
     <Compile Include="Provider\MSSQL\AuthorityProvider.cs" />
